Adding async presentation

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "xamarin"]
 	path = xamarin
 	url = https://github.com/Fammy/IntroToXamarinPresentation.git
+
+[submodule "async"]
+	path = async
+	url = https://github.com/Fammy/AsyncAwaitPresentation.git
